--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
@@ -10,11 +10,11 @@ Salut à tous !
 
 Cette semaine, c'est la "launch week" de Vercel qui devrait nous faire de belles annonces autour de React, Next.js et son offre cloud. On a déjà un petit aperçu de ce qui arrive très prochainement dans Next.js!
 
-Il y a pas mal de bons articles à lire cette semaine, donc certains sont intéractifs. J'ai bien aimé en apprendre plus sur Million.js et son concept de "block virtual DOM".
+Il y a pas mal de bons articles à lire cette semaine, dont certains sont intéractifs. J'ai bien aimé en apprendre plus sur Million.js et son concept de "block virtual DOM".
 
 Coté React-Native, la plateforme macOS rattrape son retard avec la sortie d'une v0.71, et Expo facilite la création de modules natifs locaux.
 
-Il y a un paquet de conférences les prochaines semaines, on devrait avoir de belles annonces! D'ailleurs, vous verrez peut-être un flyer pour ma newsletter à l'une d'elle? Je compte sur vous pour convaincre vos collègues de s'inscrire.
+Il y a un paquet de conférences les prochaines semaines, on devrait avoir de belles annonces! D'ailleurs, vous verrez peut-être un flyer pour ma newsletter à l'une d'elle! Je compte sur vous pour convaincre vos collègues de s'inscrire.
 
 En parlant de conférences, [React Summit](https://reactsummit.com/?utm_source=email&utm_medium=thisweekinreact) (Amsterdam 2-6 Juin) est la plus grosse conférence React au monde. Ils nous offrent 5% de réduction avec le code "ThisWeekInReact5".
 
@@ -58,7 +58,7 @@ Vercel vient de lancer son offre storage edge-first, particulièrement adaptée 
 - Vercel Postgres: database PostgreSQL, basée sur Neon.
 - Vercel Blob: file storage, basé sur Cloudflare R2.
 
-C'est la [Vercel Ship week](https://vercel.com/ship): d'autres nouveautés devraient être annoncées dans les prochains jours. L'image choisie nous laisse penser qu'il y aura une release Next.js demain, introduisant une nouvelle feature **Next.js Server Actions** permettent de co-localiser une API server avec un form React. Cela dévoile aussi la volonté d'améliorer le [progressive enhancement](https://twitter.com/sebastienlorber/status/1653701538336915456) dans les apps React, d'une manière assez similaire à Remix: le formulaire peut aussi fonctionner sans JavaScript ou hydratation.
+C'est la [Vercel Ship week](https://vercel.com/ship): d'autres nouveautés devraient être annoncées dans les prochains jours. L'image choisie nous laisse penser qu'il y aura une release Next.js demain, introduisant une nouvelle feature **Next.js Server Actions**. Cela dévoile aussi la volonté d'améliorer le [progressive enhancement](https://twitter.com/sebastienlorber/status/1653701538336915456) dans les apps React, d'une manière assez similaire à Remix: le formulaire peut aussi fonctionner sans JavaScript ou hydratation.
 
 Note: cet exemple n'est pas vulnérable aux injections SQL car il utilise des template literals.
 
@@ -68,9 +68,9 @@ Note: cet exemple n'est pas vulnérable aux injections SQL car il utilise des te
 
 **[Million.js - Virtual DOM: Back in Block](https://millionjs.org/blog/virtual-dom)**
 
-Article interactif qui présente Million.js et son concept de "Block Virtual DOM". Son approche du diffing est différente: non récursive, basée sur l'analyse statique et le dirty checking, assez similaire à Svelte.
+Article interactif qui présente Million.js et son concept de "Block Virtual DOM". Son approche du diffing est différente: non récursive, basée sur l'analyse statique, la compilation et le dirty checking, assez similaire à Svelte.
 
-Million.js ne vient pas remplacer React, mais s'intègre avec pour améliorer les performances. Il est conseillé de ne l'utiliser que dans certains cas précis: beaucoup de contenus statiques et arbres UI avec une structure stables.
+Million.js ne vient pas remplacer React, mais s'intègre avec pour améliorer les performances. Il n'est conseillé de ne l'utiliser que dans certains cas bien précis: beaucoup de contenus statiques et arbres UI avec une structure stables.
 
 ---
 
@@ -78,7 +78,7 @@ Million.js ne vient pas remplacer React, mais s'intègre avec pour améliorer le
 
 **[The Interactive Guide to Rendering in React](https://ui.dev/why-react-renders)**
 
-Article interactif qui explique quand React re-render un composant React. Une bonne resource plutôt pour les débutants, avec des explications détaillées sur setState(fn), batching, memo, StrictMode etc...
+Article interactif qui explique quand React re-render un composant. Une bonne resource pour les débutants, avec des explications détaillées sur setState(fn), batching, memo, StrictMode etc...
 
 ---
 
@@ -92,7 +92,7 @@ Article interactif qui explique quand React re-render un composant React. Une bo
 - 📜 [Server Components vs. SSR](https://www.webscope.io/blog/server-components-vs-ssr)
 - 📜 [Best YouTube Channels to learn React in 2023](https://www.code-insights.dev/posts/best-youtube-channels-to-learn-react-in-2023)
 - 📦 [Qwik v1.0](https://www.builder.io/blog/qwik-v1): sortie officielle du framework qui challenge React avec son concept de resumability. On peut utiliser React dans une application Qwik, ce qui devrait faciliter l'adoption.
-- 📦 [Lingui 4.0](https://lingui.dev/blog/2023/04/26/announcing-lingui-4.0): perçu de la lib i18n, et présente les nouveautés de la v4.0. Cette lib me semble être une bonne alternative à React-Intl: syntaxe ICU, message extraction, framework-agnostic, support React...
+- 📦 [Lingui 4.0](https://lingui.dev/blog/2023/04/26/announcing-lingui-4.0): vue d'ensemble de la lib i18n, et présentation des nouveautés de la v4.0. Cette lib me semble être une bonne alternative à React-Intl: syntaxe ICU, message extraction, framework-agnostic, support React...
 - 📦 [Remix 1.16](https://github.com/remix-run/remix/releases/tag/remix%401.16.0): stabilise support de CSS Modules, CSS imports, Vanilla Extract, PostCSS, Tailwind...
 - 📦 [React-Router 6.11](https://twitter.com/remix_run/status/1652000618620555264)
 - 🎥 [45% failed Dan's Server Component Quiz](https://www.youtube.com/watch?v=AGAax7WzStc)
@@ -139,7 +139,7 @@ Cette version 0.71 apporte un support expérimental de Fabric, ainsi que toutes 
 - 📦 [react-native-iconify](https://github.com/oktaysenkan/react-native-iconify)
 - 📦 [react-native-dnd](https://github.com/mgcrea/react-native-dnd)
 - 📦 [react-native-use-list](https://github.com/dozsolti/react-native-use-list)
-- 🎥 [How React Native Was Created At Facebook](https://www.youtube.com/watch?v=On9ghjix77c): Christopher Chedeau revient sur l'histoire de React-Native, un projet qui a failli être abandonné 🥲.
+- 🎥 [How React Native Was Created At Facebook](https://www.youtube.com/watch?v=On9ghjix77c): Christopher Chedeau revient sur l'histoire de React-Native, un projet qu'il a plus ou moins sauvé d'une mort probable.
 - 🎥 [React Native Transitions with Skia](https://www.youtube.com/watch?v=PzKWpwmmRqM): William Candillon montre comment utiliser des transitions d'image basées sur des shaders et gestures. Cela peut demander d'adapter un peu les shaders glsl existants.
 - 🎥 [Is this the Worst Volume Control? React Native and Reanimated](https://www.youtube.com/watch?v=FqdcRBqVS78)
 - 🎙️ [RNR 265 - Chain React is Back!!](https://reactnativeradio.com/episodes/rnr-265-chain-react-is-back)
