--- a/website/newsletter/144/index.mdx
+++ b/website/newsletter/144/index.mdx
@@ -106,7 +106,7 @@ Interactive article that explains when React re-render a component. A good resou
 
 ## 💸 Sponsor {#sponsor2}
 
-[![Nylas](/emails/issues/144/nylas.png)](https://www.nylas.com/?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content&utm_term)
+[![Nylas](/emails/issues/144/nylas.jpg)](https://www.nylas.com/?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content&utm_term)
 
 **[Nylas: Powering email, calendar, and contacts in the products you build](https://www.nylas.com/?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content&utm_term)**
 
