--- a/website/newsletter/145/index.mdx
+++ b/website/newsletter/145/index.mdx
@@ -47,7 +47,7 @@ Ready to use with **TypeScript**, **NextJS**, Chakra UI, TanStack Query, Storybo
 
 ## ⚛️ React {#react}
 
-<Todo />
+- 👥 [React Summit](https://reactsummit.com/?utm_source=email&utm_medium=thisweekinreact) (Amsterdam, June 2-6) is offering us -5% on tickets (code "ThisWeekInReact5").
 
 <SubscribeFormEmbed />
 
@@ -69,7 +69,9 @@ Nylas makes selecting a use case and a server-side SDK language easy. You'll get
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 👥 [App.js](https://appjs.co/) (Krakow, May 10-12) is offering us [-20% on workshops](https://ti.to/appjs/2023/discount/ThisWeekinReact20) (code "ThisWeekinReact20").
+- 👥 [Chain React](https://chainreactconf.com/) (Portland, May 18-19) is offering us -10% on entries (code "thisweekinreact").
+- 👥 [React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er June) is offering us -10% on entries (code "REACTHEBDO").
 
 ---
 
