--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
@@ -9,7 +9,9 @@ unlisted: true
 
 Salut à tous !
 
-promo conf
+vacances
+
+promo conf React-Native-Connection -20%
 
 React Summit !
 
@@ -47,6 +49,77 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 ## ⚛️ React {#react}
 
+[React Canaries: Enabling Incremental Feature Rollout Outside Meta](https://react.dev/blog/2023/05/03/react-canaries)
+
+---
+
+[Next.js 13.4](https://nextjs.org/blog/next-13-4)
+
+https://twitter.com/vercel/status/1654156302531063812
+https://twitter.com/shuding_/status/1654174958715535377
+https://twitter.com/timneutkens/status/1654174833687527439
+https://twitter.com/sebmarkbage/status/1654168460694257687
+https://twitter.com/rauchg/status/1654160039085744128
+https://www.youtube.com/watch?v=M4vrwI5PDI0
+https://twitter.com/rauchg/status/1652093972117073920
+https://twitter.com/acdlite/status/1654159613950828546
+
+Sec:
+
+- https://twitter.com/basst85/status/1654394279790346242
+- https://twitter.com/acdlite/status/1654320968368627714
+- https://twitter.com/acdlite/status/1654317374777032704
+
+Editing + monorepo?
+https://twitter.com/vercel/status/1653791640832598017
+https://twitter.com/vercel/status/1653791607609761799
+https://twitter.com/cramforce/status/1653792488770125826
+https://twitter.com/jaredpalmer/status/1653804331467165696
+
+---
+
+https://github.com/vercel/next.js/pull/49187
+
+---
+
+useOptimistic ?
+https://www.linkedin.com/posts/melvyn-malherbe_la-docs-134-de-nextjs-utilise-deux-nouveau-activity-7059942543060279296-LlSj/?utm_source=pocket_saves
+
+---
+
+- [server-only](https://www.npmjs.com/package/server-only) + https://nextjs.org/docs/getting-started/react-essentials#keeping-server-only-code-out-of-client-components-poisoning
+- [Million.js 2.3.1 - Astro support (beta)](https://twitter.com/aidenybai/status/1655088722222923776)
+- [5 Lessons Learned From Taking Next.js App Router to Production](https://www.inngest.com/blog/5-lessons-learned-from-taking-next-js-app-router-to-production) + https://twitter.com/inngest/status/1655572340443430919
+- [The Safest Way To Hide Your API Keys When Using React](https://www.smashingmagazine.com/2023/05/safest-way-hide-api-keys-react/)
+- [Pull to refresh from scratch as a React hook](https://www.strictmode.io/articles/react-pull-to-refresh)
+- [Context, Composition, and Flexibility](https://kyleshevlin.com/context-composition-and-flexibility)
+- [React Server Components, Next.js App Router and examples](https://addyosmani.com/blog/react-server-components-app-router/) + https://twitter.com/addyosmani/status/1655270096003280896
+
+- [Redwood v5](https://community.redwoodjs.com/t/redwood-v5-0-0-is-now-available/4830): support de React 18, TypeScript v5 et observabilité.
+- [HTMX is the Future](https://quii.dev/HTMX_is_the_Future)
+- [OpenNext 1.2.0 - geolocation in middleware](https://twitter.com/fanjiewang/status/1654192897678295040)
+- [RSCs on Rspack](https://twitter.com/_hyf0/status/1655538017669648385)
+- [Always Bet On React](https://www.youtube.com/watch?v=TnyslkPfXaM)
+- [Reactathon 2023 Day 2 Livestream](https://www.youtube.com/watch?v=HOD9UQFbdgc)
+- [Ink UI - Themable UI components for your next CLI](https://twitter.com/vadimdemedes/status/1655567427885846534)
+- https://twitter.com/mhevery/status/1651249670755168262
+- https://twitter.com/dan_abramov/status/1654490061528870914
+- https://twitter.com/addyosmani/status/1655270096003280896
+- https://twitter.com/0xca0a/status/1655289946402324482
+- https://twitter.com/t3dotgg/status/1655094590154866688
+- https://buildui.com/series/react-server-components/our-first-server-component
+- [New Next.js documentation](https://twitter.com/leeerob/status/1654181055740497939)
+- [Zact - Zod Server ACTions](https://github.com/pingdotgg/zact): https://twitter.com/t3dotgg/status/1654178753914732552
+- [The Rendering Journey of a React component](https://alexsidorenko.com/react-journey): une visualisation pas-à-pas du re-rendering React.
+- [How to Test UI Automatically — Storybook and Chromatic](https://www.youtube.com/watch?v=zhrboql8UuU)
+- [Creating an interactive spotlight border with CSS and React](https://www.julienthibeaut.xyz/blog/create-spotlight-border-with-react-css)
+
+---
+
+- [Next's Server Actions Might Not Be That Safe...](https://www.youtube.com/watch?v=fdKcbyEK66M)
+- [I'm Done With React](https://www.youtube.com/watch?v=Zt8mO_Aqzw8)
+- [What Even Are React Server Components](https://www.viget.com/articles/what-even-are-react-server-components/)
+- [Astro 2.4](https://astro.build/blog/astro-240/) + https://twitter.com/astrodotbuild/status/1654181441654214658
 - 👥 [React Summit](https://reactsummit.com/?utm_source=email&utm_medium=thisweekinreact) (Amsterdam, 2-6 Juin) nous offre -5% sur les entrées (code "ThisWeekInReact5").
 
 <SubscribeFormEmbed />
@@ -64,6 +137,13 @@ Want to get an inside look at the future of generative AI? On May 17th, [OpenAI 
 ---
 
 ## 📱 React-Native {#react-native}
+
+- [Best tips & tricks for E2E Maestro with React Native](https://dev.to/retyui/best-tips-tricks-for-e2e-maestro-with-react-native-2kaa)
+- https://twitter.com/kacperkapusciak/status/1654434612825792513
+- https://twitter.com/mrousavy/status/1654143459849121792
+- [React Native run-android: How to Test Various Device Types](https://www.testim.io/blog/react-native-run-android/)
+
+---
 
 - 👥 [React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er Juin) nous offre -10% (code "REACTHEBDO").
 - 👥 [App.js](https://appjs.co/) (Cracovie, 10-12 Mai) nous offre [-20% sur les workshops](https://ti.to/appjs/2023/discount/ThisWeekinReact20) (code "ThisWeekinReact20").
@@ -89,7 +169,9 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Tout savoir sur les Server Action avec NextJS 13.4](https://www.youtube.com/watch?v=GvnobIEfYs0)
+- [Next.js qui imite PHP ? - Actus JS de la semaine (08 mai 2023)](https://www.youtube.com/watch?v=xT5gu_FTAH4)
+- [3 manière d'Optimiser ton Application React](https://www.youtube.com/watch?v=Si5KZv1wLNA)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -99,13 +181,19 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [I want to talk about WebGPU](https://cohost.org/mcc/post/1406157-i-want-to-talk-about)
+- [Animate elements on scroll with Scroll-driven animations](https://developer.chrome.com/articles/scroll-driven-animations/)
+- [Cumulative Layout Shift Differences In Lab And Field Data](https://www.debugbear.com/blog/cls-lab-field-differences)
+- [Angular v16](https://blog.angular.io/angular-v16-is-here-4d7a28ec680d)
+- [Nx v16](https://blog.nrwl.io/nx-16-is-here-69584ec87053#68c6)
+- [Vitest 0.31](https://twitter.com/sheremet_va/status/1653827712576880645)
+- https://twitter.com/AndaristRake/status/1654575004825141253
 
 ---
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/aschmelyun/status/1654450114885308417
+https://twitter.com/markdalgleish/status/1654259858668163072
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
